--- a/codebase/third-party-amt-service/pom.xml
+++ b/codebase/third-party-amt-service/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wasabi</groupId>
+    <groupId>com.andresMoreno96</groupId>
     <artifactId>sample-amt-business-service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
